Fix head title Update wishlist

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>kgusman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -50,6 +50,8 @@
 								<li><a href="https://www.apple.com/shop/product/MJ2R2LL/A/magic-trackpad-2-silver?fnode=56">Magic Trackpad 2 - Silver</a></li>
 								<li><a href="https://www.gsmarena.com/blackberry_priv-7587.php">BlackBerry Priv</a></li>
 								<li><a href="https://www.amazon.com/Introduction-Algorithms-Leiserson-published-Hardcover-dp-B008F1DKXU/dp/B008F1DKXU">Introduction to Algorithms (3rd Edition)</a></li>
+								<li><a href="https://www.apple.com/apple-pencil/">Apple Pencil (1st generation)</a></li>
+								<li><a href="https://www.apple.com/iphone-se/">iPhone SE (2020)</a></li>
 							  </ul>
 						</article>
 					</div>
