--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 								<li><a href="https://www.amazon.com/Introduction-Algorithms-Leiserson-published-Hardcover-dp-B008F1DKXU/dp/B008F1DKXU">Introduction to Algorithms (3rd Edition)</a></li>
 								<li><a href="https://www.apple.com/apple-pencil/">Apple Pencil (1st generation)</a></li>
 								<li><a href="https://www.apple.com/iphone-se/">iPhone SE (2020)</a></li>
+								<li><a href="https://www.ozon.ru/context/detail/id/161022502/">Нескучная еда</a></li>
+								<li><a href="https://www.ozon.ru/context/detail/id/167028551/"></a>Нескучные десерты</li>
+								<li><a href="https://www.ozon.ru/context/detail/id/148496342/">Philips SmartSleep Sleep & Wake-up Light</a></li>
 							  </ul>
 						</article>
 					</div>
